Phase 3.1 + 3.2 + docs: JMH benchmarks, ChaosRuntime refactor, L10+ docs
- 3.2: split ChaosRuntime (~800 LOC) into ChaosDispatcher (hot path) and
  ChaosControlPlaneImpl (lifecycle/control); ChaosRuntime kept as thin facade;
  no behavior change, all tests pass

- 3.1: chaos-agent-benchmarks module with JMH 1.37; ChaosRuntimeBenchmark
  (6 variants on JDBC hot path) and HttpClientBenchmark (6 variants on HTTP
  hot path); targets: <50ns zero-scenario, <100ns no-match, <1us 10-scenario

- docs: instrumentation.md +506 lines — §12 HTTP client selectors (OkHttp/
  Apache HC/WebClient instrumentation, HttpUrlExtractor reflection chain,
  HttpClientImpl limitation at byte-level, PlantUML) and §13 JDBC selectors
  (interface subtype matching, evaluateJdbc pipeline, integration test design,
  PlantUML); new docs/benchmarks.md (338 lines, JIT warm-up analysis, x86 TSO
  acquire load, AArch64 LDAR, production calibration)

- README: Performance section (hot-path targets table, JIT internals, MFENCE/
  LDAR analysis, benchmark run command); Architecture corruption fix (8 files)